<resources>
    <string name="app_name">RX1 Cricketers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="points_table">Points Table</string>
    <string name="loss">loss</string>
    <string name="point">Points</string>
    <string name="nrr">NRR</string>
    <string name="p">P</string>
    <string name="w">W</string>
    <string name="l">L</string>
    <string name="match_no">Match Number</string>
    <string name="vs">v/s</string>
    <string name="team_one">Team 1</string>
    <string name="team_second">team 2</string>
    <string name="batting_stats">Batting stats</string>
    <string name="bowling_stats">Bowling stats</string>
    <string name="valuable_player_stats">Valuable Player</string>
    <string name="rules">rules</string>
    <string name="batsman_name">Batsman</string>
    <string name="runs_scored">Runs Scored</string>
    <string name="bowler_name">Bowler</string>
    <string name="balls_bowled">Balls Bowled</string>
    <string name="wickets_taken">Wickets Taken</string>
    <string name="r">R</string>
    <string name="c">C</string>
    <string name="runout">R/O</string>

    <string name="sm_retry">Retry</string>
    <string name="toss">Toss</string>
    <string name="score">Score</string>
    <string name="winner">Winner</string>
    <string name="mom">MOM</string>
    <string name="match_info">Match Info</string>

    <!--<string name="rules_for_valuable_player">BATTING \n-->
    <!--\t 1 run - 1 point \n-->
    <!--\t Boundary bonus - 3 points \n-->
    <!--\t 15+ runs - 5 points \n\n-->
    <!--BOWLING \n-->
    <!--\t 1 wicket - 10 points \n-->
    <!--\t 3+ wicket - 5 points \n-->
    <!--\t Madien over - 5 points \n\n-->
    <!--FIELDING \n-->
    <!--\t 1 Caught - 10 points \n-->
    <!--\t Stumping - 10 points \n-->
    <!--\t Runout - 10 points \n-->
    <!--\t (direct hit - 10 points , Fielder - 7 points + 3 points)</string>-->

    <string name="rules_for_valuable_player">(Total runs scored for team - wickets lost) - (Total runs scored against team - wickets took) \n
    ** 1 wicket = 3 runs</string>
    <string name="rules_for_valuable_player_text">Rules for Team value</string>

    <string name="banner_home_footer1">ca-app-pub-5959977289534649/8672264813</string>
    <!--<string name="banner_home_footer2">ca-app-pub-5959977289534649/3162553610</string>-->
    <string name="banner_home_footer2">ca-app-pub-5959977289534649/4159778818</string>

    <string name="native_ad_home_screen">ca-app-pub-5959977289534649/7695059211</string>
    <string name="rules_text">Rules</string>
    <string name="rules_for_game">\t 1.Entrance Fee: INR 1750/- \n
                                  \t 2.Maximum of 10 teams will participate in the tournament. There will be 2 groups A and B. \n
                                  \t 3.Each team in each group will be playing against remaining 4 teams in the same group. \n
                                  \t 4.Top 2 teams from each group with highest points (Team value) will qualify to the playoffs. \n
                                  \t 5.Top 2 teams with highest points (highest NRR if same points) will play qualifier 1, winner will play finals and loser will play in eliminator 2 (see step 6).\n
                                  \t 6.Next 2 teams will play in eliminator 1, winners will play in eliminator 2 against loser of qualifier 1(see step 5). \n
                                  \t 7.Each team participating in the tournament should be in their respective jerseys. \n
                                  \t 8.Each match will be a 6 over game. \n
                                  \t 9.Man of the match will be awarded for each match. \n
                                  \t 10.Umpires decision will be final and foremost. \n
                                  \t 11.There might be changes in the game format according to the situation. \n
                                  \t 12.There is no chance for players, to play in more than one team.
    </string>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="add_new_teams">Add teams</string>
    <string name="teams">TEAMS</string>
    <string name="pools">POOLS</string>
    <string name="batting">BATSMENS</string>
    <string name="bowler">BOWLERS</string>
    <string name="fielder">FIELDERS</string>
    <string name="team_standings">TEAM STANDINGS</string>
    <string name="matches">MATCHES</string>
    <string name="hint_captain_name">Enter captain name</string>
    <string name="submit">SUBMIT</string>
    <string name="hint_player_name">Enter player name</string>
    <string name="hint_city_name">Enter city name</string>
    <string name="hint_contact_number">Enter contact number</string>
    <string name="hint_email_id">Enter email-id</string>
    <string name="hint_team_name">Enter team name</string>
    <string name="team_name">Team name</string>
    <string name="city_name">City name</string>
    <string name="captain_name">Captain name</string>
    <string name="contact_number">Contact number</string>
    <string name="no_internet">Please check your internet connection and try again..</string>
    <string name="retry">RETRY</string>
    <string name="teams_detail">Teams detail</string>
    <string name="view_more">View more</string>
    <string name="pollA">POOL A</string>
    <string name="pollB">POOL B</string>
    <string name="create_polls">generate pools</string>
    <string name="pools_not_generated">Pools not generated yet.. Please wait for few moments</string>
    <string name="player_name">player name</string>
    <string name="hint_matches_played">Enter matches played</string>
    <string name="hint_runs_for">Total runs scored</string>
    <string name="hint_runs_against">Total runs gave</string>
    <string name="hint_total_points">Enter total points</string>
    <string name="hint_matches_wins">Enter matches wins</string>
    <string name="hint_matches_lost">Enter matches lost</string>
    <string name="edit_team">edit team scores</string>
    <string name="total_runs">total runs</string>
    <string name="plus">+</string>
    <string name="total_wickets">total wickets</string>
    <string name="hint_wickets_lost">Enter wickets lost</string>
    <string name="hint_wickets_took">Enter wickets took</string>
    <string name="points">points</string>

    <string name="banner_ad_unit_id">ca-app-pub-5959977289534649/8672264813</string>
    <string name="played">P</string>
    <string name="wins">W</string>
    <string name="losses">L</string>
    <string name="pts">pts</string>
    <string name="member_stats">member stats</string>
    <string name="hint_higest_score">Enter highest score</string>
    <string name="hint_runs_scored">Enter runs scored</string>
    <string name="hint_balls_faced">Enter balls faced</string>
    <string name="hint_fours">Enter fours</string>
    <string name="hint_overs_bowled">Enter overs bowled</string>
    <string name="hint_maidens">Enter maidens</string>
    <string name="hint_catches">Enter catches</string>
    <string name="hint_run_outs">Enter run-outs</string>
    <string name="hint_stumps">Enter stumps</string>
    <string name="mts">matches</string>
    <string name="balls_faced">balls</string>
    <string name="runs">runs</string>
    <string name="fours">fours</string>
    <string name="overs_bowled">overs</string>
    <string name="wickets_took">wkt</string>
    <string name="maidens">maiden</string>
    <string name="catches">cts</string>
    <string name="run_outs">r/o</string>
    <string name="stumps">stumps</string>
    <string name="upload">upload</string>
    <string name="title_activity_map">Map</string>
    <string name="create_matches">Enter matches</string>
    <string name="enter_matches">enter matches</string>
    <string name="hint_team_score">Enter team score</string>
    <string name="toss_win_by">Toss win by</string>
    <string name="match_win_by">Match win by</string>
    <string name="hint_runs_wickets">runs/wickets</string>
    <string name="hint_mom">Enter Man Of the Match</string>
    <string name="select_team">Select team</string>
    <string name="result">RESULT : </string>
    <string name="win">WON</string>
    <string name="lost">LOST</string>
    <string name="draw">DRAW</string>
    <string name="player_detail">player detail</string>
    <string name="matches_played">Matches played</string>
    <string name="fielding_stats">Fielding stats</string>
    <string name="wickets">Wickets</string>
    <string name="caught">Catches</string>
    <string name="run_out">run out</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="team_size">team_size</string>
    <string name="match_tied_between">Match tied between</string>
    <string name="display_matches">Display matches</string>
    <string name="man_of_the_match">Man Of the Match :</string>
    <string name="mom_yet_to_announce">Man Of the Match not yet announced!!</string>
    <string name="login">Login</string>
    <string name="hint_username">Enter User name</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_email_password_mismatch">Email-id and pasword mismatch</string>
    <string name="logout">Logout</string>
    <string name="team_standing_detail">team standing detail screen</string>
    <string name="total_matches_won">Matches win :</string>
    <string name="total_matches_played">Matches played :</string>
    <string name="total_matches_lost">matches lost :</string>
    <string name="total_runs_scored">Total Runs Scored</string>
    <string name="total_runs_gave">Total runs gave</string>
    <string name="total_wickets_lost">Total wickets lost</string>
    <string name="total_wickets_took">Total wickets took</string>
    <string name="total_team_value">Total team value</string>
    <string name="phone_sachin">8123842899</string>
    <string name="phone_sharath">8495986373</string>
    <string name="phone_mohan">8050709336</string>
    <string name="phone_soma">9663763896</string>
    <string name="phone_subbi">7795276716</string>
    <string name="email_id">email-id</string>
    <string name="privacy_policy">Privacy policy</string>


</resources>
