<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple"
    android:elevation="1dp"
    android:orientation="horizontal"
    android:padding="@dimen/size_5dp">

    <TextView
        android:id="@+id/points_table_row_tv_team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="3dp"
        android:text="@string/team_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp" />

    <TextView
        android:id="@+id/points_table_row_tv_played"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:text="@string/played"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp" />

    <TextView
        android:id="@+id/points_table_row_tv_wins"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:text="@string/wins"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp" />

    <TextView
        android:id="@+id/points_table_row_tv_loss"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:text="@string/losses"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp" />

    <TextView
        android:id="@+id/points_table_row_tv_points"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:text="@string/pts"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp" />

</LinearLayout>