<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:elevation="1dp"
    android:orientation="horizontal"
    android:padding="@dimen/size_5dp">

    <TextView
        android:id="@+id/player_stats_item_tv_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="3dp"
        android:text="@string/player_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player_stats_item_tv_matches"
        android:layout_width="@dimen/size_40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="3dp"
        android:text="@string/mts"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player_stats_item_tv_balls_faced"
        android:layout_width="@dimen/size_40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="3dp"
        android:text="@string/balls_faced"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player_stats_item_tv_runs_scored"
        android:layout_width="@dimen/size_40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="3dp"
        android:text="@string/runs"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/player_stats_item_tv_fours"
        android:layout_width="@dimen/size_40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp"
        android:paddingTop="3dp"
        android:text="@string/fours"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold" />

</LinearLayout>