<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/stats_row_tv_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:text="@string/batsman_name"
        android:textAllCaps="true"
        android:textSize="@dimen/size_14sp" />

    <TextView
        android:id="@+id/stats_row_tv_ball"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:text="@string/balls_faced"
        android:textAllCaps="true"
        android:textSize="@dimen/size_14sp" />

    <TextView
        android:id="@+id/stats_row_tv_runs_wicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:maxLines="1"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="3dp"
        android:text="@string/runs_scored"
        android:textAllCaps="true"
        android:textSize="@dimen/size_14sp" />

</LinearLayout>