<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/player_stats_item_row_cv_main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_3dp"
    app:cardCornerRadius="@dimen/size_5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:elevation="1dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:id="@+id/player_stats_row_iv_first"
                android:layout_width="@dimen/size_15dp"
                android:layout_height="@dimen/size_15dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_5dp"
                android:src="@android:drawable/presence_online"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player_stats_item_row_tv_player_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/player_stats_item_row_tv_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/team_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_12sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/player_stats_item_row_tv_matches"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingLeft="@dimen/size_5dp"
            android:paddingRight="@dimen/size_5dp"
            android:paddingTop="3dp"
            android:text="@string/mts"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp" />

        <TextView
            android:id="@+id/player_stats_item_row_tv_balls_faced"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingLeft="@dimen/size_5dp"
            android:paddingRight="@dimen/size_5dp"
            android:paddingTop="3dp"
            android:text="@string/balls_faced"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp" />

        <TextView
            android:id="@+id/player_stats_item_row_tv_runs_scored"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingLeft="@dimen/size_5dp"
            android:paddingRight="@dimen/size_5dp"
            android:paddingTop="3dp"
            android:text="@string/runs"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp" />

        <TextView
            android:id="@+id/player_stats_item_row_tv_fours"
            android:layout_width="@dimen/size_40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingLeft="@dimen/size_5dp"
            android:paddingRight="@dimen/size_5dp"
            android:paddingTop="3dp"
            android:text="@string/fours"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp" />

    </LinearLayout>
</android.support.v7.widget.CardView>