<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teams_item_cv_main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_5dp"
    app:cardCornerRadius="@dimen/size_10dp"
    app:cardElevation="@dimen/size_10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/teams_item_iv_bg_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/semi_transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teams_item_tv_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10dp"
                android:text="@string/team_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/size_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teams_item_tv_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10dp"
                android:text="@string/city_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/size_16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/size_10dp">

                <TextView
                    android:id="@+id/teams_item_tv_captain_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/captain_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_16sp" />

                <TextView
                    android:id="@+id/teams_item_tv_contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_16sp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>