<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stats_fragment_ll_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/stats_fragment_batting_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_next"
            android:padding="10dp"
            android:text="@string/batting_stats"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/stats_fragment_bowling_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_next"
            android:padding="10dp"
            android:text="@string/bowling_stats"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/stats_fragment_valuable_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_next"
            android:padding="10dp"
            android:text="@string/valuable_player_stats"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

</LinearLayout>