<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_ground">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size_10dp"
        android:elevation="@dimen/size_10dp"
        app:cardBackgroundColor="@color/transparent_blue"
        app:cardCornerRadius="@dimen/size_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/size_20dp">

            <include layout="@layout/matches_row_item" />

            <TextView
                android:id="@+id/fragment_matches_detail_tv_toss_win_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:text="@string/toss_win_by"
                android:textColor="@color/white"
                android:textSize="@dimen/size_16sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/fragment_matches_detail_tv_match_win_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:text="@string/match_win_by"
                android:textColor="@color/white"
                android:textSize="@dimen/size_16sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/fragment_matches_detail_tv_mom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_10dp"
                android:text="@string/mom_yet_to_announce"
                android:textColor="@color/white"
                android:textSize="@dimen/size_16sp"
                android:textStyle="italic|bold" />

            <ImageView
                android:id="@+id/fragment_matches_detail_iv_trophy"
                android:layout_width="@dimen/size_150dp"
                android:layout_height="@dimen/size_150dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_trophy" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>